fix grids not wrapping

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,9 @@ table {
 
 #container{
     display: flex;
+	flex-wrap: wrap;
+	align-content: flex-start;
+	height: 90vh;
 }
 
 .grids{
